--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: RTIGER
 Type: Package
 Title: HMM-Based Model for Genotyping and Cross-Over Identification
-Version: 0.99.0
+Version: 2.1.0
 Authors@R: c(
     person("Rafael", "Campos-Martin", email = "rfael.mpi@gmail.com", role = c("cre"), comment = c(ORCID = "0000-0002-1395-8571")),
     person("Sophia", "Schmickler", email = "so4a_schmickler@t-online.de", role = c("aut")),
@@ -9,7 +9,7 @@ Authors@R: c(
     person("Korbinian", "Schneeberger", email = "schneeberger@mpipz.mpg.de", role = c("aut")),
     person("Achim", "Tresch", email = "achim.tresch@uni-koeln.de", role= c("aut"))
     )
-Description: Our method integrates information from all sequenced samples, thus avoiding loss of alleles due to low coverage. Moreover, it increases the statistical power to uncover sequencing or alignment errors. 
+Description: Our method integrates information from all sequenced samples, thus avoiding loss of alleles due to low coverage. Moreover, it increases the statistical power to uncover sequencing or alignment errors <doi:10.1093/plphys/kiad191>. 
 Depends: 
     R (>= 3.6),
     GenomicRanges, 
@@ -18,8 +18,8 @@ License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
 LazyDataCompression: gzip
-Imports: methods, e1071, reshape2, ggplot2, TailRank, JuliaCall, IRanges, qpdf, grDevices, graphics, stats, utils
-RoxygenNote: 7.1.1
+Imports: methods, e1071, extraDistr, reshape2, ggplot2, TailRank, JuliaCall, IRanges, qpdf, grDevices, graphics, stats, utils
+RoxygenNote: 7.2.3
 VignetteBuilder: knitr
 Suggests: 
     knitr,
@@ -28,4 +28,3 @@ Suggests:
     Gviz, 
     rtracklayer 
 biocViews: GenomeAnnotation, HiddenMarkovModel, Sequencing
-   
